// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Properties container renders when authenticated 1`] = `
<div
  className="media"
>
  <WithStyles(List)>
    <WithStyles(ListItem)
      className="media__item"
      disableGutters={true}
    >
      <WithStyles(Avatar)>
        <pure(FileUpload) />
      </WithStyles(Avatar)>
      <t
        className="dropzone"
        disableClick={false}
        disablePreview={false}
        disabled={false}
        inputProps={Object {}}
        maxSize={Infinity}
        minSize={0}
        multiple={true}
        preventDropOnDocument={true}
      >
        <div
          className="name"
        >
          Upload new items
        </div>
        <div
          className="date"
        >
          <code>
            xlsx
          </code>
          , 
          <code>
            docx
          </code>
          , 
          <code>
            pdf
          </code>
          ,
           
          <code>
            png
          </code>
          , 
          <code>
            jpeg
          </code>
        </div>
      </t>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="media__item"
      disableGutters={true}
      key="1234"
      onClick={[Function]}
    >
      <WithStyles(ListItemAvatar)>
        <WithStyles(Avatar)
          style={
            Object {
              "backgroundColor": "#ffcc80",
            }
          }
        >
          <pure(Photo) />
        </WithStyles(Avatar)>
      </WithStyles(ListItemAvatar)>
      <WithStyles(ListItemText)
        className="media__item__text"
        primary="test"
        secondary="April 16th 2018"
      />
      <WithStyles(ListItemSecondaryAction)
        onClick={[Function]}
      >
        <WithStyles(IconButton)
          aria-label="More"
        >
          <pure(MoreVert) />
        </WithStyles(IconButton)>
      </WithStyles(ListItemSecondaryAction)>
    </WithStyles(ListItem)>
    <WithStyles(Menu)
      anchorEl={null}
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        onClick={[Function]}
      >
        <WithStyles(ListItemIcon)>
          <pure(Delete) />
        </WithStyles(ListItemIcon)>
        <WithStyles(ListItemText)
          inset={true}
          primary="Delete"
        />
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </WithStyles(List)>
</div>
`;

exports[`Properties container renders when not authenticated 1`] = `
<div
  className="media"
>
  <WithStyles(List)>
    <WithStyles(ListItem)
      className="media__item"
      disableGutters={true}
      key="1234"
      onClick={[Function]}
    >
      <WithStyles(ListItemAvatar)>
        <WithStyles(Avatar)
          style={
            Object {
              "backgroundColor": "#ffcc80",
            }
          }
        >
          <pure(Photo) />
        </WithStyles(Avatar)>
      </WithStyles(ListItemAvatar)>
      <WithStyles(ListItemText)
        className="media__item__text"
        primary="test"
        secondary="April 16th 2018"
      />
    </WithStyles(ListItem)>
    <WithStyles(Menu)
      anchorEl={null}
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        onClick={[Function]}
      >
        <WithStyles(ListItemIcon)>
          <pure(Delete) />
        </WithStyles(ListItemIcon)>
        <WithStyles(ListItemText)
          inset={true}
          primary="Delete"
        />
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </WithStyles(List)>
</div>
`;
